3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Corrected code to compile under -ansi gcc flag:
 * correction of some non posix compatible calls around scandir 
 * changing configure to detect the absence of 'alphasort' prototype
 * converted some '//' comment to /**/ one
 * reran automake1.8/autoconf2.50/autheader2.50
Note even it it compiles with -ansi -pedantic, it still need cleanup to
get 64 bits experience code working!
Tchize 2005/05/07

Applied Casper1's patch [ #1193516 ] for Hurd support.
 * socket/lowlevel.c: #ifdef some code part that won't work.
Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/libproto.h
 * common/arch.c
 * common/living.c
Ryo 2005-05-03

Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/sproto.h
 * socket/info.c
 * socket/item.c
Ryo 2005-04-30

Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/sproto.h
 * server/apply.c
 * server/ban.c
 * server/spell_util.c
Ryo 2005-04-27

server/skills.c: Change it so that jeweler skill is used to identify
   amulets, not alchemy skill.
MSW 2005-04-27

Apply patch 1190107 so server compiles on HURD.
common/porting.c: Add define for MAXPATHLEN
socket/init.c: Add check for __GNU__ for setsockopt()
MSW 2005-04-27

Change to have objects generated by creator properly fixed up (material,
for potions, spell object, etc).
---
common/treasure.c: add GT_MINIMAL flag to change_treasure() to do minimal
   processing for objects created.
include/treasure.h: Add GT_MINIMAL define.
server/apply.c:  Add call to fix_generated_item() in convert_item()
MSW 2005-04-27

Various minor bugfixes.